[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topogen"
version = "0.1.0"
description = "A Python package for processing and visualizing topographic survey data."
authors = [
  { name = "James Westbury", email = "james@example.com" },
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "numpy>=2.2.2",
  "matplotlib>=3.10.0",
  "scipy>=1.15.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
]
docs = [
  "sphinx>=8.1.3",
  "sphinx-rtd-theme>=3.0.2",
  "sphinx-autodoc-typehints>=3.0.1",
  "myst-parser>=4.0.0",
]

[project.scripts]
# This will create a command-line script called "topogen"
# that maps to the main() function in topogen.cli
topogen = "topogen.cli:main"
